# VisionProject

./: Readme.md
Code/: Readme.md  do_pe.py  helpers.py  objectGlobalPose.pcd  run_all.py  settings.py  trial_run.py  visu1.py  visu2.py
ScanPlugin/: CMakeLists.txt
ScanPlugin/src/: SamplePlugin.cpp  SamplePlugin.hpp  SamplePlugin.ui
Scenes/: gt_10.txt  gt_11.txt  gt_12.txt  gt_13.txt  gt_14.txt  gt_15.txt  gt_16.txt  gt_17.txt  gt_18.txt  gt_19.txt  gt_20.txt  gt_21.txt  gt_22.txt  gt_23.txt  gt_24.txt  gt_25.txt  gt_26.txt  gt_27.txt  gt_28.txt  gt_29.txt  gt_30.txt  gt_31.txt  gt_32.txt  gt_33.txt  gt_34.txt  gt_35.txt  gt_36.txt  gt_37.txt  gt_38.txt  gt_39.txt  gt_40.txt  gt_41.txt  gt_42.txt  gt_43.txt  gt_44.txt  gt_45.txt  gt_46.txt  gt_47.txt  gt_48.txt  gt_49.txt  (+41 more)
WorkCell/: Scene.wc.xml
WorkCell/UR5/UR-6-85-5-A/: Device.wc.xml  UR6855A_light.dwc.xml  UR6855A_light.wc.xml  setup.prox.xml
WorkCell/parts/models/: obj_000009.stl
WorkCell/table/: Sigmund_table.mtl
WorkCell/wsg50/: GripperCollisionSetup.xml  wsg50.dwc.xml
WorkCell/wsg50/geometry/: FingerWeiss50.mtl  FingerWeiss50_mount.mtl  FingerWeiss50_tip.mtl
WorkCell/wsg50/geometry/fingerexchange/: Finger_exchanger.ac
results/: estimate_47_0.0_0.txt  time_47_0.0_0.txt
